# lattice

./: .gitignore  AUTO-UPDATE-SETUP.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
collab-server/: README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
public/: polyfills.js
scripts/: bump-version.mjs  gen-venues.mjs  package-collab-zip.sh  prepare-omp-sidecar.mjs  prepare-pi-sidecar.mjs
src/: App.css  App.test.tsx  App.tsx  agent-panel.tsx  app-settings.ts  app-types.ts  app-updater.css  app-updater.tsx  app-utils.ts  appendix-pages.test.ts  appendix-pages.ts  (+113 more)
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/omp-extension/: lattice.test.ts  lattice.ts
src-tauri/pi-extension/: lattice.test.ts  lattice.ts
src-tauri/src/: agents.rs  alphaxiv.rs  commands.rs  doctor.rs  format_latex.rs  fts.rs  git.rs  latex.rs  lib.rs  literature.rs  macos_window.rs  main.rs  models.rs  openalex.rs  overleaf.rs  papers.rs  pdf_fonts.rs  project.rs  sessions.rs  skill_store.rs  skills.rs  tex_setup.rs  texcount.rs  texlab.rs
src-tauri/src/embedded_skills/: UPSTREAM.md
src-tauri/src/embedded_skills/bibcite/: SKILL.md
src-tauri/templates/arxiv-style/: UPSTREAM.md
src-tauri/templates/arxivtex/: UPSTREAM.md  main.cls
src-tauri/templates/iclr-2026/: UPSTREAM.md  main.tex
src-tauri/templates/icml-2026/: UPSTREAM.md  main.tex
src-tauri/templates/neurips-2026/: UPSTREAM.md  main.tex
(+22 files in other folders)
